force-app/main/default/objects/Mail__c/fields/Height_inches__c.field-meta.xml
<CustomField>
    <fullName>Height_inches__c</fullName>
    <label>Height (inches)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>