force-app/main/default/objects/Mail__c/fields/Weight_Oz__c.field-meta.xml
<CustomField>
    <fullName>Weight_Oz__c</fullName>
    <label>Weight (Oz)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>