force-app/main/default/objects/Mail__c/validationRules/Inhabitant_Restrict_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Inhabitant_Restrict_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
(AND($Profile.Name = &quot;Driver&quot;, ISCHANGED(  Inhabitant__c  ))),
(AND($Profile.Name = &quot;Mail Handler&quot;, ISCHANGED( Inhabitant__c )))
)</errorConditionFormula>
    <errorMessage>Only Admins can edit this field</errorMessage>
</ValidationRule>