force-app/main/default/objects/Mail__c/validationRules/Mail_Name_Restrict_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Mail_Name_Restrict_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
(AND($Profile.Name = &quot;Driver&quot;, ISCHANGED(   Name  ))),
(AND($Profile.Name = &quot;Mail Handler&quot;, ISCHANGED(   Name  )))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Only Admins can edit this field</errorMessage>
</ValidationRule>